# scratchtools

./: README.md
lib/: LICENSE.md  pyproject.toml  readme.md
lib/scratchtools/: __init__.py
lib/scratchtools/data/wL/export/: __init__.py  exportconfig.py
lib/scratchtools/data/wL/parse/: __init__.py
lib/scratchtools/data/wS/light/: __init__.py
lib/scratchtools/data/wS/parse/: __init__.py
