[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name    = "scratchtools"
version = "1.0.0"
authors = [ { name="wilhelmbismarck", email="wilhelmbismarck@tutanota.de" } ]
description = ""
readme  = "README.md"
requires-python = ">=3.9"
license-files   = ["LICENCSE.md"]
classifiers     = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wilhelmbismarck/scratchtools"
Issues   = "https://github.com/wilhelmbismarck/scratchtools/issues"
